adding redis and more api
